--- a/Angular/src/index.html
+++ b/Angular/src/index.html
@@ -10,7 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-  <script src="https://code.jscharting.com/latest/jscharting.js"></script>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=bubbles" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=chat_dashed" />
+<script src="https://code.jscharting.com/latest/jscharting.js"></script>
 </head>
 <body class="mat-typography" style="background-color: #f4f3ef;">
   <app-root></app-root>
